Corrected alignment for emoji in the note

--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -69,6 +69,7 @@
 
 .mood-emoji {
     position: absolute;
-    top: 7px;
-    left: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
